tree-sitter-lox/grammar.js
/// <reference types="tree-sitter-cli/dsl" />
// @ts-check

module.exports = grammar({
  name: "lox",

  extras: ($) => [/\s/, $.comment],

  precedences: () => [
    [
      "postfix",
      "unary",
      "multiplicative",
      "additive",
      "relational",
      "equality",
      "logical_and",
      "logical_or",
      "ternary",
      "arguments",
      "assignment",
      "comma",
    ],
  ],

  word: ($) => $.identifier,

  rules: {
    source_file: ($) =>
      repeat(choice($._declaration, $._signature, $._statement)),

    // Declarations
    _declaration: ($) =>
      choice(
        $.variable_declaration,
        $.function_declaration,
        $.class_declaration,
      ),

    variable_declaration: ($) =>
      seq(
        "var",
        field("name", $.identifier),
        optional(seq("=", field("initialiser", $._expression))),
        ";",
      ),

    function_declaration: ($) => seq("fun", $._function),

    class_declaration: ($) =>
      seq(
        "class",
        field("name", $.identifier),
        optional(seq("<", field("superclass", $.identifier))),
        field("body", $.class_body),
      ),

    class_body: ($) => seq("{", repeat($.method_declaration), "}"),

    method_declaration: ($) => seq(optional($.modifiers), $._function),

    _signature: ($) => choice($.method_signature, $.property_signature),

    method_signature: ($) =>
      seq(
        "(",
        "method",
        ")",
        optional($.modifiers),
        field("class", $.identifier),
        ".",
        field("method", $.identifier),
        field("parameters", $.parameter_list),
      ),

    property_signature: ($) =>
      seq(
        "(",
        "property",
        ")",
        optional($.modifiers),
        field("class", $.identifier),
        ".",
        field("name", $.identifier),
      ),

    modifiers: () => repeat1(choice("static", "get", "set")),

    _function: ($) =>
      prec.right(
        seq(
          field("name", $.identifier),
          field("parameters", $.parameter_list),
          field("body", optional($.block)),
        ),
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional(seq(optional($.identifier), repeat(seq(",", $.identifier)))),
        ")",
      ),

    _statement: ($) =>
      choice(
        $.expression_statement,
        $.print_statement,
        $.block,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.break_statement,
        $.continue_statement,
        $.return_statement,
      ),

    // Statements
    expression_statement: ($) => seq($._expression, ";"),

    print_statement: ($) => seq("print", $._expression, ";"),

    block: ($) => seq("{", repeat(choice($._declaration, $._statement)), "}"),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          field("condition", $._expression),
          ")",
          field("then", $._statement),
          optional(seq("else", field("else", $._statement))),
        ),
      ),

    while_statement: ($) =>
      seq(
        "while",
        "(",
        field("condition", $._expression),
        ")",
        field("body", $._statement),
      ),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        choice(
          field("initialiser", choice($._declaration, $.expression_statement)),
          ";",
        ),
        field("condition", optional($._expression)),
        ";",
        field("update", optional($._expression)),
        ")",
        field("body", $._statement),
      ),

    break_statement: () => seq("break", ";"),

    continue_statement: () => seq("continue", ";"),

    return_statement: ($) => seq("return", $._expression, ";"),

    // Expressions
    _expression: ($) =>
      choice(
        $._literal,
        $.list_expression,
        $.function_expression,
        $.group_expression,
        $.identifier,
        $.this_expression,
        $.super_expression,
        $.call_expression,
        $.index_expression,
        $.property_expression,
        $.unary_expression,
        $.binary_expression,
        $.ternary_expression,
        $.assignment_expression,
      ),

    _literal: ($) => choice($.number, $.string, $.boolean, $.nil),

    list_expression: ($) =>
      seq(
        "[",
        seq(
          optional(
            seq(
              optional($._expression),
              repeat(prec("arguments", seq(",", $._expression))),
            ),
          ),
        ),
        "]",
      ),

    number: (_) => /\d+(\.\d+)?/,

    string: ($) =>
      seq('"', repeat(choice($.string_content, $.escape_sequence)), '"'),

    string_content: (_) => /[^"\\]+/,

    escape_sequence: (_) => /\\(x[^"\\]{0,2}|[^"])/,

    boolean: (_) => choice("true", "false"),

    nil: (_) => "nil",

    function_expression: ($) =>
      seq("fun", field("parameters", $.parameter_list), field("body", $.block)),

    group_expression: ($) => seq("(", field("expression", $._expression), ")"),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    this_expression: (_) => "this",

    super_expression: (_) => "super",

    call_expression: ($) =>
      prec(
        "postfix",
        seq(
          field("callee", $._expression),
          field("arguments", $.argument_list),
        ),
      ),

    index_expression: ($) =>
      prec(
        "postfix",
        seq(
          field("subject", $._expression),
          "[",
          field("index", $._expression),
          "]",
        ),
      ),

    property_expression: ($) =>
      prec(
        "postfix",
        seq(field("object", $._expression), ".", field("name", $.identifier)),
      ),

    argument_list: ($) =>
      seq(
        "(",
        optional(
          seq(
            optional($._expression),
            repeat(prec("arguments", seq(",", $._expression))),
          ),
        ),
        ")",
      ),

    unary_expression: ($) =>
      prec.right("unary", seq(choice("!", "-"), field("right", $._expression))),

    binary_expression: ($) =>
      choice(
        prec.left(
          "comma",
          seq(field("left", $._expression), ",", field("right", $._expression)),
        ),
        prec.left(
          "logical_or",
          seq(
            field("left", $._expression),
            "or",
            field("right", $._expression),
          ),
        ),
        prec.left(
          "logical_and",
          seq(
            field("left", $._expression),
            "and",
            field("right", $._expression),
          ),
        ),
        prec.left(
          "equality",
          seq(
            field("left", $._expression),
            choice("==", "!="),
            field("right", $._expression),
          ),
        ),
        prec.left(
          "relational",
          seq(
            field("left", $._expression),
            choice("<", "<=", ">", ">="),
            field("right", $._expression),
          ),
        ),
        prec.left(
          "additive",
          seq(
            field("left", $._expression),
            choice("+", "-"),
            field("right", $._expression),
          ),
        ),
        prec.left(
          "multiplicative",
          seq(
            field("left", $._expression),
            choice("*", "/", "%"),
            field("right", $._expression),
          ),
        ),
      ),

    ternary_expression: ($) =>
      prec.right(
        "ternary",
        seq(
          field("condition", $._expression),
          "?",
          field("then", $._expression),
          ":",
          field("else", $._expression),
        ),
      ),

    assignment_expression: ($) =>
      prec.right(
        "assignment",
        seq(
          field(
            "left",
            choice($.identifier, $.index_expression, $.property_expression),
          ),
          "=",
          field("right", $._expression),
        ),
      ),

    comment: (_) => choice(seq("//", /.*/)),
  },
});
